# pdf-digest-generator-AI

./: .gitignore  README.md  SPEC.md  pdf-digest  pyproject.toml  setup.sh
src/pdf_digest/: __init__.py
src/pdf_digest/application/ports/: __init__.py
src/pdf_digest/application/usecases/: __init__.py
src/pdf_digest/domain/entities/: __init__.py  document.py
src/pdf_digest/domain/value_objects/: extraction_mode.py
src/pdf_digest/infrastructure/pdf/: pymupdf_reader.py
src/pdf_digest/presentation/cli/: app.py
src/pdf_digest/presentation/formatters/: __init__.py
